# api/docs/swagger.yaml
@@ -65,112 +65,6 @@ definitions:
       message:
         type: string
     type: object
-  users.Follow:
-    properties:
-      birth_day:
-        type: string
-      email:
-        type: string
-      id:
-        type: string
-      image:
-        type: string
-      lastname:
-        type: string
-      name:
-        type: string
-      username:
-        type: string
-    type: object
-  users.Followers:
-    properties:
-      created_at:
-        type: string
-      follower_id:
-        type: string
-      id:
-        type: string
-      updated_at:
-        type: string
-      user_id:
-        type: string
-    type: object
-  users.Following:
-    properties:
-      created_at:
-        type: string
-      following_id:
-        type: string
-      id:
-        type: string
-      updated_at:
-        type: string
-      user_id:
-        type: string
-    type: object
-  users.GetUserRes:
-    properties:
-      limit:
-        type: integer
-      page:
-        type: integer
-      users:
-        items:
-          $ref: '#/definitions/users.User'
-        type: array
-    type: object
-  users.GetaFollowersRes:
-    properties:
-      followers:
-        items:
-          $ref: '#/definitions/users.Followers'
-        type: array
-      limit:
-        type: integer
-      page:
-        type: integer
-    type: object
-  users.GetaFollowingRes:
-    properties:
-      following:
-        items:
-          $ref: '#/definitions/users.Following'
-        type: array
-      limit:
-        type: integer
-      page:
-        type: integer
-    type: object
-  users.Massage:
-    properties:
-      message:
-        type: string
-      success:
-        type: boolean
-    type: object
-  users.User:
-    properties:
-      birth_day:
-        type: string
-      created_at:
-        type: string
-      email:
-        type: string
-      id:
-        type: string
-      image:
-        type: string
-      lastname:
-        type: string
-      name:
-        type: string
-      password:
-        type: string
-      updated_at:
-        type: string
-      username:
-        type: string
-    type: object
 info:
   contact: {}
   description: Auth service
@@ -361,335 +255,6 @@ paths:
       summary: Parolni qayta tiklash
       tags:
       - Authentication
-  /user/deleteFollower/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali foydalanuvchidan kuzatuvchini o'chirishingiz
-        mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: O'chirilishi kerak bo'lgan kuzatuvchi IDsi
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Kuzatuvchini muvaffaqiyatli o'chirdi
-          schema:
-            $ref: '#/definitions/users.Massage'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchidan kuzatuvchini o'chirish
-      tags:
-      - Users
-  /user/deleteUser{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Ushbu endpoint ma'lum bir foydalanuvchini ID orqali o'chirish uchun
-        ishlatiladi.
-      parameters:
-      - description: Foydalanuvchi IDsi
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Foydalanuvchi muvaffaqiyatli o'chirildi
-          schema:
-            $ref: '#/definitions/users.Massage'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchini o'chirish
-      tags:
-      - Users
-  /user/followers:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali foydalanuvchining kuzatuvchilarini ro'yxatini
-        olish mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: 'Qaysi sahifani ko''rmoqchisiz? Default: 1'
-        in: query
-        name: page
-        type: integer
-      - description: 'Bir sahifada nechta element bo''lishi kerak? Default: 10'
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Foydalanuvchining kuzatuvchilar ro'yxati
-          schema:
-            $ref: '#/definitions/users.GetaFollowersRes'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchining kuzatuvchilarini olish
-      tags:
-      - Users
-  /user/following:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali ma'lum bir foydalanuvchining kimlarni kuzatayotganini
-        olish mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: Sahifa raqami
-        in: query
-        name: page
-        type: integer
-      - description: Sahifadagi elementlar soni
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Kuzatadigan foydalanuvchilar ro'yxati
-          schema:
-            $ref: '#/definitions/users.GetaFollowingRes'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchi kimlarni kuzatayotganini olish
-      tags:
-      - Users
-  /user/getFollower/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali ma'lum bir kuzatuvchining ma'lumotlarini
-        olish mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: Kuzatuvchi IDsi
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Kuzatuvchi ma'lumotlari
-          schema:
-            $ref: '#/definitions/users.Follow'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Kuzatuvchi ma'lumotlarini olish
-      tags:
-      - Users
-  /user/getUser{id}:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint ma'lum bir foydalanuvchini ID orqali olish uchun
-        ishlatiladi.
-      parameters:
-      - description: Foydalanuvchi IDsi
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Foydalanuvchi ma'lumotlari muvaffaqiyatli olindi
-          schema:
-            $ref: '#/definitions/users.User'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchini ID orqali olish
-      tags:
-      - Users
-  /user/getUsers:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint mavjud foydalanuvchilar ro'yxatini olish uchun ishlatiladi.
-        Ro'yxat sahifalash orqali cheklangan.
-      parameters:
-      - description: 'Sahifa raqami, default: 1'
-        in: query
-        name: page
-        type: integer
-      - description: 'Har bir sahifadagi foydalanuvchilar soni, default: 10'
-        in: query
-        name: limit
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Foydalanuvchilar ro'yxati muvaffaqiyatli qaytarildi
-          schema:
-            $ref: '#/definitions/users.GetUserRes'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchilarni olish
-      tags:
-      - Users
-  /user/subscribe:
-    post:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali foydalanuvchi boshqa foydalanuvchini kuzatishi
-        mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: Kuzatilayotgan foydalanuvchi IDsi
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Kuzatish muvaffaqiyatli amalga oshirildi
-          schema:
-            $ref: '#/definitions/users.Massage'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchini kuzatish
-      tags:
-      - Users
-  /users/deleteFollowing/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali ma'lum bir foydalanuvchining kuzatayotgan
-        boshqa foydalanuvchisini o'chirish mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: Kuzatishni to'xtatmoqchi bo'lgan foydalanuvchi ID'si
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: O'chirish muvaffaqiyatli amalga oshirildi
-          schema:
-            $ref: '#/definitions/users.Massage'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchi kuzatayotgan foydalanuvchini o'chirish
-      tags:
-      - Users
-  /users/getFollowing/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Ushbu endpoint orqali ma'lum bir foydalanuvchining kimni kuzatayotganini
-        ID orqali olish mumkin.
-      parameters:
-      - description: Bearer token bilan birga keladi
-        in: header
-        name: Athorization
-        required: true
-        type: string
-      - description: Kuzatmoqchi bo'lgan foydalanuvchi ID'si
-        in: body
-        name: id
-        required: true
-        schema:
-          type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Kuzatmoqchi bo'lgan foydalanuvchining ma'lumotlari
-          schema:
-            $ref: '#/definitions/users.Follow'
-        "400":
-          description: Xatolik yuz berdi
-          schema:
-            $ref: '#/definitions/model.Error'
-      security:
-      - ApiKeyAuth: []
-      summary: Foydalanuvchi kimni kuzatayotganini ID orqali olish
-      tags:
-      - Users
 securityDefinitions:
   ApiKeyAuth:
     in: header
